<resources>
    <string name="app_name">SapiMarket</string>
    <string name="login_text">Login</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="phone">Phone No.</string>
    <string name="password">Password</string>
    <string name="validate_button">Validate</string>
    <string name="register_button">Register</string>
    <string name="new_account">Do not have an account yet? Sign Up</string>
    <string name="register">Already have an account? Login</string>
    <string name="alert_message">Are you sure you want to exit?</string>
    <string name="positive_alert_button">Exit!</string>
    <string name="negative_alert_button">Cancel</string>
    <string name="register_text">Create an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add Item</string>
    <string name="add_picture">Add picture</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="owner">Owner</string>
    <string name="phone_no">Phone No.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="call_seller">Call Seller</string>
</resources>