<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >
    <TextView
        android:id="@+id/add_item_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:fontFamily="sans-serif"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginLeft" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/add_item_text">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo2"
                android:layout_margin="10dp"
                ></ImageView>

            <TextView
                android:id="@+id/add_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="0dp"
                android:text="@string/add_picture"
                android:textColor="#00329B"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="10dp"
            android:textColor="#00329B"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_margin="10dp"
            android:textColor="#00329B"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/price"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_margin="10dp"
            android:textColor="#00329B"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/category"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_margin="10dp"
            android:textColor="#00329B"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/description"
            android:layout_margin="10dp"
            android:inputType="textMultiLine"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corners"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/add_item"
            android:textColor="#00329B"/>
    </LinearLayout>
</ScrollView>



</RelativeLayout>