<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/item_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:fontFamily="sans-serif"
        android:text="Item name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginLeft" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_baseline_star_24"
        android:layout_toRightOf="@+id/item_text"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12.5dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/item_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo2"
                    android:layout_margin="10dp"
                    ></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/price_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textStyle="italic"
                        android:textColor="#00329B"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/owner"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/owner_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/owner"
                        android:textStyle="italic"
                        android:textColor="#00329B"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_no"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/phoneNum_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_no"
                        android:textStyle="italic"
                        android:textColor="#00329B"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/add_to_cart_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corners"
                        android:backgroundTint="#00329B"
                        android:paddingTop="1dp"
                        android:paddingBottom="1dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/add_to_cart"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/description"
                android:layout_margin="10dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/call_seller_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#00329B"
                android:layout_margin="10dp"
                android:paddingRight="35dp"
                android:paddingLeft="35dp"

                android:layout_gravity="center"
                android:text="@string/call_seller"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>